--- a/app/views/weather/_results.html.erb
+++ b/app/views/weather/_results.html.erb
@@ -1,5 +1,30 @@
 <div id='results'>
-  <h2><%= @zip_code.with_state_string %> Weather</h2>
+  <h4><%= @zip_code.with_state_string %> Weather</h4>
   <p>Data extracted from Rails cache: <b><%= @data[:from_cache] %></b></p>
-  <p><%= @data[:data] %></p>
+
+  <% cc = @data[:data]['currentConditions'] %>
+  <div>
+    <div><b>Current Conditions</b></div>
+    <div class="item"><%= cc['conditions'] %></div>
+    <div class="item">Temperature: <%= cc['temp'] %></div>
+    <div class="item">Feels Like: <%= cc['feelslike'] %></div>
+    <div class="item">Humidity: <%= cc['humidity'] %></div>
+    <div class="item">Dew Point: <%= cc['dew'] %></div>
+    <div class="item">Precipitation: <%= cc['precip'] %></div>
+  </div>
+  <% @data[:data]['days'].each do |day| %>
+    <div class="day">
+      <b><%= day['datetime'] %></b>: <%= day['description'] %>
+      <% day['hours'].each do |hour| %>
+        <div class="hour">
+            <div class="item"><b>Time: <%= hour['datetime'] %></b></div>
+            <div class="item">Temperature: <%= hour['temp'] %></div>
+            <div class="item">Feels Like: <%= hour['feelslike'] %></div>
+            <div class="item">Humidity: <%= hour['humidity'] %></div>
+            <div class="item">Dew Point: <%= hour['dew'] %></div>
+            <div class="item">Precipitation: <%= hour['precip'] %></div>
+        </div>
+      <% end %>
+    </div>
+  <% end %>
 </div>
