--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require_tree .
  *= require_self
  */
+
+div.day { padding-top: 10px; }
+div.hour { border-bottom: 1px solid #0000;
+           padding-bottom: 10px;
+         }
+div.item { padding-left: 30px; }
