--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,7 +15,5 @@
  */
 
 div.day { padding-top: 10px; }
-div.hour { border-bottom: 1px solid #0000;
-           padding-bottom: 10px;
-         }
-div.item { padding-left: 30px; }
+ul { margin: 3px 0; }
+.heading { font-weight: 800; color: brown; }
